fix(common): restore header overflow for smartphones

--- a/brasilcomvc/common/static/styl/res-smartphone/header.styl
+++ b/brasilcomvc/common/static/styl/res-smartphone/header.styl
@@ -6,6 +6,7 @@ body
 
 	#main-header
 		height: @margin-top
+		overflow: visible  // grid system implies 'hidden'
 
 		.logo img
 			left: 50%
